--- a/PaperZee/lang/pt.json
+++ b/PaperZee/lang/pt.json
@@ -28,7 +28,14 @@
         "show_less": "Mostrar menos",
         "help": "Ajuda",
         "users": "Utilizadores",
-        "calendar": "Calendário"
+        "calendar": "Calendário",
+        "bouncers": "",
+        "notifications": "",
+        "contact": {
+            "facebook": "",
+            "email": ""
+        },
+        "clans": ""
     },
     "activity": {
         "user_captured": "{user} Capturado",
@@ -58,7 +65,17 @@
             "other": "{count} Pontos"
         },
         "none": "Nenhum",
-        "user_today": "Hoje"
+        "user_today": "Hoje",
+        "user_renovated": "",
+        "you_renovated": "",
+        "renovation": {
+            "one": "",
+            "other": ""
+        },
+        "renovon": {
+            "one": "",
+            "other": ""
+        }
     },
     "user": {
         "level_n": "\nNível {level}",
@@ -69,12 +86,20 @@
         "quebec_quest_progress": "Quebec Quest Progress",
         "special_hunter_challenge": "Desafio Especial Caçador",
         "captured_types": "Tipos Capturados",
-        "activity": "Atividade"
+        "activity": "Atividade",
+        "clan_stats": "",
+        "clan_progress_desc": "",
+        "clan_info": "",
+        "clan_info_desc": "",
+        "challenges": "",
+        "sh_lite": "",
+        "sh_pro": ""
     },
     "inventory": {
         "undeployed": "Não implantados",
         "credits": "Créditos",
-        "history": "Historico"
+        "history": "Historico",
+        "unknown_name": ""
     },
     "app_info": {
         "credits": "Creditos",
@@ -82,7 +107,23 @@
         "translators": "Tradutores",
         "database_contributors": "Contribuidores da Base de Dados",
         "patrons_and_supporters": "Patronos e Patrocinadores",
-        "build_n": "Contruir {build}"
+        "build_n": "Contruir {build}",
+        "patreon_donate": "",
+        "paypal_donate": "",
+        "paypal_donate_desc": "",
+        "custom_titles": {
+            "primary_dev": "",
+            "finnish": "",
+            "dutch": "",
+            "german": "",
+            "hungarian": "",
+            "swedish": "",
+            "french": "",
+            "czech": "",
+            "danish": "",
+            "portugese": "",
+            "lithuanian": ""
+        }
     },
     "your_bouncers": {
         "capture": {
@@ -90,6 +131,169 @@
             "other": "{count} Capturas"
         },
         "last_captured": "\nUltimo capturado: {time}",
-        "in_limbo": "Descansando"
+        "in_limbo": "Descansando",
+        "at_munzee": ""
+    },
+    "calendar": {
+        "days": {
+            "monday": "",
+            "tuesday": "",
+            "wednesday": "",
+            "thursday": "",
+            "friday": "",
+            "saturday": "",
+            "sunday": ""
+        },
+        "off": ""
+    },
+    "clan": {
+        "requirements": "",
+        "rewards": "",
+        "individual": "",
+        "group": "",
+        "level_n": "",
+        "shadow": "",
+        "goal": "",
+        "view": {
+            "subtract": "",
+            "total": ""
+        },
+        "share": "",
+        "indiv": "",
+        "group_total": "",
+        "level": {
+            "one": "",
+            "other": ""
+        }
+    },
+    "search": {
+        "clan": "",
+        "type": "",
+        "empty": "",
+        "user": ""
+    },
+    "db": {
+        "go_back": "",
+        "types_search": "",
+        "category": "",
+        "type": {
+            "info": "",
+            "evo": "",
+            "pouch": "",
+            "can_host": "",
+            "lands_on": ""
+        }
+    },
+    "auth": {
+        "add": "",
+        "welcome": "",
+        "tap": ""
+    },
+    "shc": {
+        "lite": {
+            "tob": "",
+            "nomad": "",
+            "myth_1": "",
+            "myth_2": "",
+            "pc_1": "",
+            "pc_2": "",
+            "flat": "",
+            "temp": "",
+            "scatter": ""
+        },
+        "pro": {
+            "tob": "",
+            "nomad": "",
+            "retire": "",
+            "myth_1": "",
+            "myth_2": "",
+            "myth_3": "",
+            "myth_4": "",
+            "pc_1": "",
+            "pc_2": "",
+            "pc_fun": "",
+            "flat": "",
+            "temp": "",
+            "pscatter": "",
+            "vscatter": ""
+        }
+    },
+    "notifications": {
+        "munzee_blog": "",
+        "save": "",
+        "unavailable_web": "",
+        "unavailable_generic": ""
+    },
+    "settings": {
+        "add_user": "",
+        "update": "",
+        "theme": "",
+        "language": ""
+    },
+    "bouncers": {
+        "duration": ""
+    },
+    "scanner": {
+        "scan_new": "",
+        "munzee": "",
+        "type": ""
+    },
+    "quest": {
+        "task_1": "",
+        "task_2": "",
+        "task_3": "",
+        "task_4": "",
+        "task_5": "",
+        "task_6": "",
+        "task_7": "",
+        "task_8": ""
+    },
+    "themes": {
+        "black": "",
+        "blue": "",
+        "bluegrey": "",
+        "darkblue": "",
+        "green": "",
+        "grey": "",
+        "purple": "",
+        "white": ""
+    },
+    "screens": {
+        "_redirect": "",
+        "Map": "",
+        "Tools": "",
+        "Settings": "",
+        "Notifications": "",
+        "Info": "",
+        "Scanner": "",
+        "Calendar": "",
+        "Bouncers": "",
+        "BouncerMap": "",
+        "MunzeeDetails": "",
+        "MunzeeDetailsID": "",
+        "AllClans": "",
+        "ClanRequirements": "",
+        "ClanSearch": "",
+        "Clan": "",
+        "UserSearch": "",
+        "UserDetails": "",
+        "UserActivity": "",
+        "UserInventory": "",
+        "UserClan": "",
+        "UserQuest": "",
+        "UserCapturesCategory": "",
+        "UserSHCPro": "",
+        "UserSHCLite": "",
+        "UserSHC": "",
+        "UserBouncers": "",
+        "DBType": "",
+        "DBSearch": "",
+        "DBCategory": "",
+        "Auth": ""
+    },
+    "changelog": {
+        "build_n": "",
+        "continue": "",
+        "no_changelog": ""
     }
 }
