--- a/PaperZee/lang/en-gb.json
+++ b/PaperZee/lang/en-gb.json
@@ -30,12 +30,13 @@
         "users": "Users",
         "calendar": "Calendar",
         "bouncers": "Bouncers",
-        "notifications": "notifications",
+        "notifications": "Notifications",
         "contact": {
             "facebook": "You can contact us via Facebook",
             "email": "or email us at support@cuppazee.app"
         },
-        "clans": "Clans"
+        "clans": "Clans",
+        "logging_in": "Logging in..."
     },
     "activity": {
         "user_captured": "{user} captured",
@@ -135,7 +136,7 @@
         },
         "last_captured": "Last Captured: {time}",
         "in_limbo": "Taking a Rest",
-        "at_munzee": "At {munzee}"
+        "host": "At {munzee} by {username}"
     },
     "calendar": {
         "days": {
@@ -231,7 +232,9 @@
         "add_user": "Add User",
         "update": "Force Update",
         "theme": "Theme: {name}",
-        "language": "Language: {name}"
+        "language": "Language: {name}",
+        "logout": "Logout",
+        "save": "Save Settings"
     },
     "bouncers": {
         "duration": "Duration: {duration}"
