--- a/PaperZee/lang/fi.json
+++ b/PaperZee/lang/fi.json
@@ -35,7 +35,8 @@
             "facebook": "",
             "email": ""
         },
-        "clans": ""
+        "clans": "",
+        "logging_in": ""
     },
     "activity": {
         "user_captured": "{user} cappasi",
@@ -135,7 +136,7 @@
         },
         "last_captured": "Viimeksi capattu {time}",
         "in_limbo": "Huilailee",
-        "at_munzee": ""
+        "host": ""
     },
     "calendar": {
         "days": {
@@ -231,7 +232,9 @@
         "add_user": "",
         "update": "",
         "theme": "",
-        "language": ""
+        "language": "",
+        "logout": "",
+        "save": ""
     },
     "bouncers": {
         "duration": ""
