--- a/PaperZee/lang/lt.json
+++ b/PaperZee/lang/lt.json
@@ -37,7 +37,8 @@
             "facebook": "",
             "email": ""
         },
-        "clans": ""
+        "clans": "",
+        "logging_in": ""
     },
     "activity": {
         "user_captured": "{user} sugavo",
@@ -145,7 +146,7 @@
         },
         "last_captured": "",
         "in_limbo": "",
-        "at_munzee": ""
+        "host": ""
     },
     "calendar": {
         "days": {
@@ -242,7 +243,9 @@
         "add_user": "",
         "update": "",
         "theme": "",
-        "language": ""
+        "language": "",
+        "logout": "",
+        "save": ""
     },
     "bouncers": {
         "duration": ""
